<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Theme.AppCompat.DialogWhenLarge"
    >


    <LinearLayout
        style="@style/layout1">

        <LinearLayout
            style="@style/BarraTitulos">

            <ImageView
                style="@style/Iconos"
                android:src="@drawable/teatroopt"/>

            <TextView
                android:text="@string/Teatros"
                android:id="@+id/fuente"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_gravity="left|center"
                android:layout_weight="1.04"
                android:autoText="false"
                android:background="@color/limegreen"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:textColor="@color/antiquewhite"
                android:textSize="50sp"
                android:textStyle="bold"
                />
        </LinearLayout>


        <LinearLayout
            style="@style/layout2">
            <LinearLayout
                style="@style/layout3">

            </LinearLayout>
            <LinearLayout
                style="@style/layout4">
                <ImageView
                    style="@style/imgItem"
                    android:src="@drawable/logoaguilaopt"/>
                <TextView
                    style="@style/titulItem"
                    android:text="@string/aguila"/>
            </LinearLayout>
            <LinearLayout
                style="@style/layout5"
                >
                <TextView
                    android:text="@string/DesAguila"
                    style="@style/DesTextItem"/>
            </LinearLayout>
            <LinearLayout
                style="@style/layout6">
                <ImageView
                    style="@style/imgDesc"
                    android:src="@drawable/descalzaopt"/>
                <ImageView
                    style="@style/imgDesc"
                    android:src="@drawable/aguila"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/layout2">
            <LinearLayout
                style="@style/layout3">

            </LinearLayout>
            <LinearLayout
                style="@style/layout4">
                <ImageView
                    style="@style/imgItem"
                    android:src="@drawable/logotobonopt"/>
                <TextView
                    style="@style/titulItem"
                    android:text="@string/tobon"/>
            </LinearLayout>
            <LinearLayout
                style="@style/layout5"
                >
                <TextView
                    android:text="@string/Destobon"
                    style="@style/DesTextItem"/>
            </LinearLayout>
            <LinearLayout
                style="@style/layout6">
                <ImageView
                    style="@style/imgDesc"
                    android:src="@drawable/pabloobon"/>
                <ImageView
                    style="@style/imgDesc"
                    android:src="@drawable/imgsalaopt"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/layout2">
            <LinearLayout
                style="@style/layout3">

            </LinearLayout>
            <LinearLayout
                style="@style/layout4">
                <ImageView
                    style="@style/imgItem"
                    android:src="@drawable/logomataopt"/>
                <TextView
                    style="@style/titulItem"
                    android:text="@string/candelas"/>
            </LinearLayout>
            <LinearLayout
                style="@style/layout5"
                >
                <TextView
                    android:text="@string/DesCinecolom"
                    style="@style/DesTextItem"/>
            </LinearLayout>
            <LinearLayout
                style="@style/layout6">
                <ImageView
                    style="@style/imgDesc"
                    android:src="@drawable/matacandelasopt"/>
                <ImageView
                    style="@style/imgDesc"
                    android:src="@drawable/andelasopt"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>



</ScrollView>