<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Theme.AppCompat.DialogWhenLarge"
    >


    <LinearLayout
        style="@style/layout1">

        <LinearLayout
            style="@style/BarraTitulos">

            <ImageView
                style="@style/Iconos"
                android:src="@drawable/rumba"/>

            <TextView
                android:text="@string/Rumba"
                android:id="@+id/fuente"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_gravity="left|center"
                android:layout_weight="1.04"
                android:autoText="false"
                android:background="@color/limegreen"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:textColor="@color/antiquewhite"
                android:textSize="50sp"
                android:textStyle="bold"
                />
        </LinearLayout>


        <LinearLayout
            style="@style/layout2">
            <LinearLayout
                style="@style/layout3">

            </LinearLayout>
            <LinearLayout
                style="@style/layout4">
                <ImageView
                    style="@style/imgItem"
                    android:src="@drawable/medellinelblueopt"/>
                <TextView
                    style="@style/titulItem"
                    android:text="@string/Elblue"/>
            </LinearLayout>
            <LinearLayout
                style="@style/layout5"
                >
                <TextView
                    android:text="@string/DesElblue"
                    style="@style/DesTextItem"/>
            </LinearLayout>
            <LinearLayout
                style="@style/layout6">
                <ImageView
                    style="@style/imgDesc"
                    android:src="@drawable/elblueopt"/>
                <ImageView
                    style="@style/imgDesc"
                    android:src="@drawable/elbluemedellinopt"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/layout2">
            <LinearLayout
                style="@style/layout3">

            </LinearLayout>
            <LinearLayout
                style="@style/layout4">
                <ImageView
                    style="@style/imgItem"
                    android:src="@drawable/bloungeopt"/>
                <TextView
                    style="@style/titulItem"
                    android:text="@string/blounge"/>
            </LinearLayout>
            <LinearLayout
                style="@style/layout5"
                >
                <TextView
                    android:text="@string/Desblounge"
                    style="@style/DesTextItem"/>
            </LinearLayout>
            <LinearLayout
                style="@style/layout6">
                <ImageView
                    style="@style/imgDesc"
                    android:src="@drawable/ccopt"/>
                <ImageView
                    style="@style/imgDesc"
                    android:src="@drawable/medbuencomerahieloopt"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/layout2">
            <LinearLayout
                style="@style/layout3">

            </LinearLayout>
            <LinearLayout
                style="@style/layout4">
                <ImageView
                    style="@style/imgItem"
                    android:src="@drawable/logobabylonopt"/>
                <TextView
                    style="@style/titulItem"
                    android:text="@string/babylon"/>
            </LinearLayout>
            <LinearLayout
                style="@style/layout5"
                >
                <TextView
                    android:text="@string/Desbabylon"
                    style="@style/DesTextItem"/>
            </LinearLayout>
            <LinearLayout
                style="@style/layout6">
                <ImageView
                    style="@style/imgDesc"
                    android:src="@drawable/babylonmedellinopt"/>
                <ImageView
                    style="@style/imgDesc"
                    android:src="@drawable/babylondiscoopt"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</ScrollView>