<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Theme.AppCompat.DialogWhenLarge"
    >


    <LinearLayout
        style="@style/layout1">

        <LinearLayout
            style="@style/BarraTitulos">

            <ImageView
                style="@style/Iconos"
                android:src="@drawable/dinner"/>

            <TextView
                android:text="@string/Comida"
                android:id="@+id/fuente"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_gravity="left|center"
                android:layout_weight="1.04"
                android:autoText="false"
                android:background="@color/limegreen"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:textColor="@color/antiquewhite"
                android:textSize="50sp"
                android:textStyle="bold"
                />
        </LinearLayout>


        <LinearLayout
            style="@style/layout2">
            <LinearLayout
                style="@style/layout3">

            </LinearLayout>
            <LinearLayout
                style="@style/layout4">
                <ImageView
                    style="@style/imgItem"
                    android:src="@drawable/ilforno"/>
                <TextView
                    style="@style/titulItem"
                    android:text="@string/ilforno"/>
            </LinearLayout>
            <LinearLayout
                style="@style/layout5"
                >
                <TextView
                    android:text="@string/DesIlforno"
                    style="@style/DesTextItem"/>
            </LinearLayout>
            <LinearLayout
                style="@style/layout6">
                <ImageView
                    style="@style/imgDesc"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/ilfornoopt"/>
                <ImageView
                    style="@style/imgDesc"
                    android:src="@drawable/comilfornoopt"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/layout2">
            <LinearLayout
                style="@style/layout3">

            </LinearLayout>
            <LinearLayout
                style="@style/layout4">
                <ImageView
                    style="@style/imgItem"
                    android:src="@drawable/insitulogo"/>
                <TextView
                    style="@style/titulItem"
                    android:text="@string/insitu"/>
            </LinearLayout>
            <LinearLayout
                style="@style/layout5"
                >
                <TextView
                    android:text="@string/DesInsitu"
                    style="@style/DesTextItem"/>
            </LinearLayout>
            <LinearLayout
                style="@style/layout6">
                <ImageView
                    style="@style/imgDesc"
                    android:src="@drawable/insituopt"/>
                <ImageView
                    style="@style/imgDesc"
                    android:src="@drawable/insitudosopt"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/layout2">
            <LinearLayout
                style="@style/layout3">

            </LinearLayout>
            <LinearLayout
                style="@style/layout4">
                <ImageView
                    style="@style/imgItem"
                    android:src="@drawable/verdeo"/>
                <TextView
                    style="@style/titulItem"
                    android:text="@string/verdeo"/>
            </LinearLayout>
            <LinearLayout
                style="@style/layout5"
                >
                <TextView
                    android:text="@string/Desverdeo"
                    style="@style/DesTextItem"/>
            </LinearLayout>
            <LinearLayout
                style="@style/layout6">
                <ImageView
                    style="@style/imgDesc"
                    android:src="@drawable/restauranteverdeoopt"/>
                <ImageView
                    style="@style/imgDesc"
                    android:src="@drawable/verderorestaurantmedellinopt"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</ScrollView>