<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Theme.AppCompat.DialogWhenLarge"
    >


        <LinearLayout
            style="@style/layout1">

            <LinearLayout
                style="@style/BarraTitulos">

                <ImageView
                    style="@style/Iconos"
                    android:src="@drawable/cinemadopt"/>

                <TextView
                    android:text="@string/Cines"
                    android:id="@+id/fuente"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_gravity="left|center"
                android:layout_weight="1.04"
                android:autoText="false"
                android:background="@color/limegreen"
                android:gravity="center_vertical"
                android:singleLine="false"
                android:textColor="@color/antiquewhite"
                android:textSize="50sp"
                android:textStyle="bold"
                 />
            </LinearLayout>


            <LinearLayout
                style="@style/layout2">
                <LinearLayout
                    style="@style/layout3">

                </LinearLayout>
                <LinearLayout
                    style="@style/layout4">
                    <ImageView
                        style="@style/imgItem"
                        android:src="@drawable/logocicecolombiaopt"/>
                    <TextView
                        style="@style/titulItem"
                        android:text="@string/CineColombia"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/layout5"
                    >
                    <TextView
                        android:text="@string/DesCinecolom"
                        style="@style/DesTextItem"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/layout6"
                    android:layout_gravity="center">
                    <ImageView
                        style="@style/imgDesc"
                        android:src="@drawable/ccopt"/>
                    <ImageView
                        style="@style/imgDesc"
                        android:src="@drawable/medbuencomerahieloopt"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/layout2">
                <LinearLayout
                    style="@style/layout3">

                </LinearLayout>
                <LinearLayout
                    style="@style/layout4"
                    >
                    <ImageView
                        style="@style/imgItem"
                        android:src="@drawable/procinallogopt"/>
                    <TextView
                        style="@style/titulItem"
                        android:text="@string/procinal"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/layout5"
                    >
                    <TextView
                        android:text="@string/DesProcinal"
                        style="@style/DesTextItem"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/layout6">
                    <ImageView
                        style="@style/imgDesc"
                        android:src="@drawable/salaprocinalopt"/>
                    <ImageView
                        style="@style/imgDesc"
                        android:src="@drawable/procinalsalaopt"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/layout2">
                <LinearLayout
                    style="@style/layout3">

                </LinearLayout>
                <LinearLayout
                    style="@style/layout4">
                    <ImageView
                        style="@style/imgItem"
                        android:src="@drawable/royalopt"/>
                    <TextView
                        style="@style/titulItem"
                        android:text="@string/royal"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/layout5"
                    >
                    <TextView
                        android:text="@string/DesRoyal"
                        style="@style/DesTextItem"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/layout6">
                    <ImageView
                        style="@style/imgDesc"
                        android:src="@drawable/salaroyalopt"/>
                    <ImageView
                        style="@style/imgDesc"
                        android:src="@drawable/cinemaroyalopt"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


</ScrollView>